# bppsuite

./: .gitignore  AUTHORS  AUTHORS.txt  CMakeLists.txt  ChangeLog  INSTALL.txt  Makefile.am  README.md  autoclean.sh  bppSuite.spec  bppsuite.spec  buildBin.sh  buildExample.sh  configure.ac
Examples/: Ancestor.bpp  Consense.bpp  Dist.bpp  LSU.phy  LSUML.dnd  ML.bpp  MLNH.bpp  MLNHGG.bpp  OutGroup.txt  Pars.bpp  PhySamp.bpp  README  README.md  ReRoot.bpp  SeqGen.bpp  SeqGenHomogeneousModel.bpp  SeqGenNonHomogeneousModel.bpp  SeqMan.bpp  TreeDraw.bpp  tree.dnd
Examples/AlignmentScoring/: AlnScores.bpp
Examples/ConsensusTree/: Consense.bpp
Examples/Data/: HIV1_REF_2010_gag_DNA.fasta  HIV1_REF_2010_gag_macse_AA.fasta  HIV1_REF_2010_gag_macse_DNA.fasta  Myo.dnd  Myo.mase  eyal_protein.fasta  eyal_protein_tree.newick  lysozymeLarge.dnd  lysozymeLarge.fasta  treeList.dnd  treeList2.dnd
Examples/Distance/: Dist.bpp
Examples/Drawing/: TreeDraw.bpp
Examples/MaximumLikelihood/Codons/BranchModel/: ML.bpp
Examples/MaximumLikelihood/Codons/CladeModel/: ML.bpp
Examples/MaximumLikelihood/Codons/CladeModel/M1/: ML.bpp  MixedLik.bpp
Examples/MaximumLikelihood/Codons/CladeModel/Mixed/: ML.bpp  MixedLik.bpp
Examples/MaximumLikelihood/Codons/CladeModel/RELAX/: ML.bpp  MixedLik.bpp
Examples/MaximumLikelihood/Codons/M0/: ML.bpp  SameAA.bpp
Examples/MaximumLikelihood/Codons/M1/: Ancestor.bpp  DFP.bpp  ML.bpp  MixedLik.bpp
Examples/MaximumLikelihood/Codons/M2/: ML.bpp
Examples/MaximumLikelihood/Codons/MultiData/: multidata.bpp  tree1.newick  tree2.newick  trees.newick
Examples/MaximumLikelihood/Codons/RELAX/: ML.bpp
Examples/MaximumLikelihood/Nucleotides/Homogeneous/: Ancestor.bpp  ML.bpp  SeqGen.bpp
Examples/MaximumLikelihood/Nucleotides/NonHomogeneousGG/: MLNHGG.bpp
Examples/MaximumLikelihood/Nucleotides/NonHomogeneousGeneral/: Ancestor.bpp  MLNH.bpp
Examples/MaximumLikelihood/Nucleotides/Partition/: ML.bpp
Examples/MaximumLikelihood/Proteins/Homogeneous/: Ancestor.bpp  ML.bpp  R4S.bpp
Examples/MaximumLikelihood/Proteins/Mixed/: ML.bpp  MixedLik.bpp
Examples/Parsimony/: Pars.bpp
Examples/PhylogeneticSampling/: PhySamp.bpp
Examples/PopStats/: PopStats.bpp  PopStatsCodonSites.bpp  alignment.phy
Examples/ReRooting/: ReRoot.bpp
Examples/Recipes/: biopp.tex  multiProc_ML.bpp
Examples/Recipes/Data/: aln1.fa  aln1b.fa  aln2.fa
Examples/Recipes/How_to_explore_GC3/: README.md  example.fa  hom_YN98_ML.bpp  map_GC3.bpp  map_GC3_norm.bpp  opb_GC3_ML.bpp  spec_tree.dnd
Examples/Recipes/How_to_maximize_likelihoods/: HMM_ML.bpp  README.md  autocorr_ML.bpp
Examples/Recipes/How_to_simulate/: README.md  mixed_hom.bpp  nonstat_WAG_nonhom.bpp  simple_data.bpp  simple_hom.bpp  sites_rate_state_hom.bpp
Examples/SequenceManipulation/: SeqMan.bpp  SeqMan2.bpp
Examples/SequenceSimulation/: SeqGen.bpp  SeqGenNonHomogeneousModel.bpp
Examples/SequenceSimulation/Homogeneous/: SeqGen.bpp
Examples/SequenceSimulation/HomogeneousCovarion/: SeqGen.bpp
Examples/SequenceSimulation/Mixture/: SeqGen.bpp
Examples/SequenceSimulation/MultiModel/: AutoCorr.bpp  Partition.bpp
Examples/SequenceSimulation/NonHomogeneous/: SeqGen.bpp
Examples/SequenceSimulation/Tutorial/: README.md  autocorr.bpp  infos_rates.tsv  mixed_IG_hom.bpp  mixed_hom.bpp  nonstat_CAT_nonhom.bpp  nonstat_WAG_nonhom.bpp  partition.bpp  recipes_for_simulation.tex  simple_data.bpp  simple_hom.bpp  sites_rate_hom.bpp  sites_rate_state_hom.bpp
Examples/SequenceSimulation/WithSiteSpecificSettings/: SeqGen.bpp  infos.csv
Examples/Tutorial/: HMM_ML.bpp  autocorr_ML.bpp  biopp.aux  biopp.tex  hom_Anc.bpp  hom_ML.bpp  mixture_ML.bpp  multiData_ML.bpp  multiProcNHX_ML.bpp  multiProc_ML.bpp  nonhom_ML.bpp  partition_ML.bpp
Examples/Tutorial/Data/: aln1.nhx  aln1.tree  aln2.nhx  aln2.tree
bppSuite/: CMakeLists.txt  Makefile.am  Makefile.in  bppAlnScore.cpp  bppAncestor.cpp  bppBranchLik.cpp  bppConsense.cpp  bppDist.cpp  bppML.cpp  bppMixedLikelihoods.cpp  bppPars.cpp  bppPhyloSampler.cpp  bppPopStats.cpp  bppR4S.cpp  bppReRoot.cpp  bppSeqGen.cpp  bppSeqMan.cpp  bppTools.cpp  bppTools.h  bppTreeDraw.cpp
debian/: bppsuite.manpages  changelog  control  copyright  rules
doc/: CMakeLists.txt  Makefile.am  bppsuite.html  bppsuite.texi  version.texi
docs/: _config.yml  index.md
man/: CMakeLists.txt  bppalnscore.1  bppalnscore.1.txt  bppancestor.1  bppancestor.1.txt  bppbranchlik.1  bppconsense.1  bppconsense.1.txt  bppdist.1  bppmixedlikelihoods.1  bppmixedlikelihoods.1.txt  bppml.1  bppml.1.txt  bpppars.1  bppphysamp.1.txt  bpppopstats.1  bppreroot.1  bppseqgen.1  bppseqman.1  bppseqman.1.txt  bpptreedraw.1
script/: install_sources.sh
